--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <br> <a href="resume.pdf" download class="btn">See My Resume</a>
           </div>
           <div >
-          <img src="ansh.jpg">
+          <img src="ansh.JPG">
           
           </div>
             </div>
